# Psoriasis-Robust-Adv-Defense

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docs-requirements.txt  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: 404.html  README.md  _config.yml  hashmap.json  index.html  index.md  license.html
docs-src/: index.md  license.md
docs-src/.vitepress/: config.ts
docs-src/.vitepress/theme/: custom.css
docs-src/contributing/: code-style.md  guide.md  workflow.md
docs-src/documentation/: attack.md  cli-reference.md  preprocessing.md  structure.md  training.md
docs-src/getting-started/: installation.md  overview.md  quickstart.md
docs-src/research/: algorithm.md  methodology.md  results.md
docs/assets/: app.CtarRbG4.js  app.DYWRGKLc.js  app.DiwIVDOy.js  contributing_code-style.md.Cqu1p5F-.js  contributing_code-style.md.Cqu1p5F-.lean.js  contributing_code-style.md.D760bcYb.js  contributing_code-style.md.D760bcYb.lean.js  contributing_code-style.md.DHgtpiJI.js  contributing_code-style.md.DHgtpiJI.lean.js  contributing_guide.md.B5PwrQcN.js  contributing_guide.md.B5PwrQcN.lean.js  contributing_guide.md.BFPpfkfq.js  contributing_guide.md.BFPpfkfq.lean.js  contributing_guide.md.Ctqozl0V.js  contributing_guide.md.Ctqozl0V.lean.js  contributing_workflow.md.BHhDdb1W.js  contributing_workflow.md.BHhDdb1W.lean.js  contributing_workflow.md.CHA5E2Tk.js  contributing_workflow.md.CHA5E2Tk.lean.js  contributing_workflow.md.mMvMOvgE.js  contributing_workflow.md.mMvMOvgE.lean.js  documentation_attack.md.BgU518xe.js  documentation_attack.md.BgU518xe.lean.js  documentation_attack.md.C-hGJCjs.js  documentation_attack.md.C-hGJCjs.lean.js  documentation_attack.md.T7EWFDHg.js  documentation_attack.md.T7EWFDHg.lean.js  documentation_cli-reference.md.B_M3dI_R.js  documentation_cli-reference.md.B_M3dI_R.lean.js  documentation_cli-reference.md.C1_uxfTR.js  documentation_cli-reference.md.C1_uxfTR.lean.js  documentation_cli-reference.md.DMvgulRZ.js  documentation_cli-reference.md.DMvgulRZ.lean.js  documentation_preprocessing.md.BOqpL6dl.js  documentation_preprocessing.md.BOqpL6dl.lean.js  documentation_preprocessing.md.CapXSVJE.js  documentation_preprocessing.md.CapXSVJE.lean.js  documentation_preprocessing.md.CvF9lSYH.js  documentation_preprocessing.md.CvF9lSYH.lean.js  documentation_structure.md.B8dK7T6k.js  (+62 more)
docs/assets/chunks/: @localSearchIndexroot.B9MkMcwp.js  @localSearchIndexroot.BGO-Cfq-.js  @localSearchIndexroot.BmJmxo5L.js  VPLocalSearchBox.BJoIfAwK.js  VPLocalSearchBox.BQV_v6PC.js  VPLocalSearchBox.CjkIUBG9.js  framework.x5zXLvit.js  theme.CcixyKGw.js  theme.DWArf8Af.js  theme.gyJLnU1C.js
docs/contributing/: code-style.html  code-style.md  guide.html  guide.md  workflow.html
docs/documentation/: attack.html  cli-reference.html  cli-reference.md  preprocessing.html  preprocessing.md  structure.html  structure.md  training.html  training.md
docs/getting-started/: installation.html  installation.md  overview.html  quickstart.html  quickstart.md
docs/javascripts/: katex.js
docs/research/: algorithm.html  methodology.html  methodology.md  results.html  results.md
docs/stylesheets/: extra.css
src/psorad/: __init__.py  cli.py
src/psorad/attack/: __init__.py  losses.py  runner.py
src/psorad/attack/samoo_core/: __init__.py  attack.py  population.py  selection.py  solution.py  variation.py
src/psorad/data/: __init__.py  dataset.py
src/psorad/models/: __init__.py  binary_classifier.py  classifier.py  download.py
src/psorad/preprocess/: __init__.py  pipeline.py
src/psorad/trainers/: __init__.py  train.py  train_binary.py
src/psorad/utils/: __init__.py  image.py
tools/: auto_tune_attack.py  build_imagenet_reference.py  download_reference_subset.py
